ros migrated to ros2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(layered_exercise)
+project(rosp_layered_exercise)
 
 # Find ROS2 dependencies
 find_package(ament_cmake REQUIRED)
@@ -16,7 +16,7 @@ include_directories(
 )
 
 # Add executables
-add_executable(layered_exercise_node src/node.cpp)
+add_executable(layered_exercise_node src/move_turtle.cpp)
 ament_target_dependencies(layered_exercise_node rclcpp turtlesim geometry_msgs)
 
 add_executable(kill_turtle_node src/kill_turtle.cpp)
